# GQFC

./: .gitignore  GQFC Presentation Haskell Symposium.pptx  GQFC.bib  GQFC.cabal  GQFC.lhs  README.md  build-code  build-everything  build-paper  build-sandbox  extract-abstract  extract-code  lfix.psd  styling.lhs
